fixed header on small screen

--- a/src/css/mediaQueries.css
+++ b/src/css/mediaQueries.css
@@ -31,6 +31,11 @@
     header h1 {
         font-size: 1.4em;
         align-self: center;
+        margin-left: 5%;
+    }
+
+    header a {
+      margin-right: 5%;
     }
         
     .board {
