--- a/src/css/outer.css
+++ b/src/css/outer.css
@@ -93,6 +93,7 @@ header {
     justify-content: space-between;
     align-self: flex-start;
     align-items: center;
+    gap: 10px;
     border-bottom: 3px solid rgb(2, 17, 15);
     background-color: rgba(2, 20, 9, 0.8);
     border-collapse: collapse;
